# TreeNose

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
comparison_data/java/: eclipse.csv  gson.csv  maven.csv
comparison_data/js/: chancejs.csv  lodash.csv  moment.csv
comparison_data/py/: django.csv  nltk.csv  numpy.csv
example_codes/java_codes/: classes.java  conditional.java  functions.java  long_message_chains.java
example_codes/js_codes/: conditional.js  functions.js  long_message_chains.js
example_codes/python_codes/: classes.py  conditional.py  functions.py  long_method_chain.py
example_codes/ruby_codes/: classes.rb  conditional.rb  functions.rb
example_codes/rust_codes/: conditional.rs  long_message_chain.rs  methods.rs  parameters.rs
main/: code_extractor.js  main.js  package-lock.json  package.json  parser.js  report_generator.js  univseral_configs.json
main/checks/: code_query.js  smell_long_class.js  smell_long_message_chains.js  smell_long_method.js  smell_long_param.js
main/configs/: .path_ignore  lang_suffixes.json  (+1 more)
map/: package-lock.json  package.json  tsconfig.json
src/: code_extractor.js  main.js  package.json  report_generator.js  tree_printer.js
study_data/: project_versions.json  smell_proportion.json
tree-sitters/: package-lock.json  package.json  parser.js
tree-sitters-in-npm/: package-lock.json  package.json
tree-sitters/tree-sitter-python/: pyproject.toml
tree-sitters/tree-sitter-python/parsee_codes/parsee_python/: ex_parsee_1.py
web/: index.html  package-lock.json  package.json
web/gpt/: hello.js  (+1 more)
(+217 files in other folders)
