[tool.poetry]
name = "tree-sitter-python"
version = "0.1.0"
description = ""
authors = ["Yanqiao4396 <chen02@allegheny.edu>"]
readme = "README.md"
packages = [{include = "tree_sitter_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
